# Cracker---2025

airlevi-ng/: CMakeLists.txt  LICENCE  README.md  USAGE.md
airlevi-ng/include/airlevi-beacon/: rogue_ap.h
airlevi-ng/include/airlevi-crack/: brute_force.h  dictionary_attack.h  wep_crack.h  wpa_crack.h
airlevi-ng/include/airlevi-deauth/: deauth_attack.h
airlevi-ng/include/airlevi-dump/: packet_capture.h  wifi_scanner.h
airlevi-ng/include/airlevi-forge/: packet_forge.h
airlevi-ng/include/airlevi-handshake/: handshake_capture.h
airlevi-ng/include/airlevi-lib/: password_database.h
airlevi-ng/include/airlevi-mon/: interface_manager.h
airlevi-ng/include/airlevi-monitor/: advanced_monitor.h
airlevi-ng/include/airlevi-pmkid/: pmkid_attack.h
airlevi-ng/include/airlevi-replay/: packet_replay.h
airlevi-ng/include/airlevi-serv/: network_server.h
airlevi-ng/include/airlevi-suite/: interactive_menu.h  statistics.h
airlevi-ng/include/airlevi-wps/: wps_attack.h
airlevi-ng/include/common/: config.h  crypto_utils.h  logger.h  network_interface.h  packet_parser.h  types.h
airlevi-ng/src/airlevi-beacon/: main.cpp  rogue_ap.cpp
airlevi-ng/src/airlevi-crack/: brute_force.cpp  dictionary_attack.cpp  main.cpp  wep_crack.cpp  wpa_crack.cpp
airlevi-ng/src/airlevi-deauth/: deauth_attack.cpp  main.cpp
airlevi-ng/src/airlevi-dump/: main.cpp  packet_capture.cpp  wifi_scanner.cpp
airlevi-ng/src/airlevi-forge/: main.cpp  packet_forge.cpp
airlevi-ng/src/airlevi-handshake/: handshake_capture.cpp  main.cpp
airlevi-ng/src/airlevi-lib/: main.cpp  password_database.cpp
airlevi-ng/src/airlevi-mon/: interface_manager.cpp  main.cpp
airlevi-ng/src/airlevi-monitor/: advanced_monitor.cpp  main.cpp
airlevi-ng/src/airlevi-pmkid/: main.cpp  pmkid_attack.cpp
airlevi-ng/src/airlevi-replay/: main.cpp  packet_replay.cpp
airlevi-ng/src/airlevi-serv/: main.cpp  network_server.cpp
airlevi-ng/src/airlevi-suite/: interactive_menu.cpp  main.cpp  statistics.cpp
airlevi-ng/src/airlevi-wps/: main.cpp  wps_attack.cpp
airlevi-ng/src/common/: config.cpp  crypto_utils.cpp  logger.cpp  network_interface.cpp  packet_parser.cpp  types.cpp
